# bids-cli

./: .gitignore  pyproject.toml
bidscli/: main.py
